# GMM-free-energy-estimator-and-clustering-tool

./: CMakeLists.txt  GMM.cpp  GMM.h  README.md  run_GMM.cpp
include/: ArgParse.h  GMM.h  GaussianMixtureDensity.h  ID_estimator.h  Kmeans.h
src/: ArgParse.cpp  GMM.cpp  GaussianMixtureDensity.cpp  ID_estimator.cpp  Kmeans.cpp  run_GMM.cpp
